PL-8205 IE9 UI regressions - fix time part alignment in datefield

--- a/modules/web/themes/halo/components/datefield/datefield.scss
+++ b/modules/web/themes/halo/components/datefield/datefield.scss
@@ -30,7 +30,7 @@
         display: table-cell;
       }
 
-      .v-ie9 & .c-maskedfield {
+      .v-ie9 & .cuba-maskedfield {
         float: right;
       }
     }
