--- a/modules/web/themes/havana/components/datefield/datefield.scss
+++ b/modules/web/themes/havana/components/datefield/datefield.scss
@@ -22,11 +22,11 @@
       display: table-row;
 
       .#{$primary-stylename},
-      .c-maskedfield {
+      .cuba-maskedfield {
         display: table-cell;
       }
 
-      .v-ie9 & .c-maskedfield {
+      .v-ie9 & .cuba-maskedfield {
         float: right;
       }
     }
